Desenvolvimento da tela ELDR

--- a/views/eldr/view.html
+++ b/views/eldr/view.html
@@ -1,8 +1,8 @@
 <section>
-    <div class="container">
-        <div class="row table-header">
+    <div class="container bg-gray-dark banner">
+        <div class="row">
             <div class="col-xs-12">
-                <p>Linha ELDR - Interruptores diferenciais residuais</p>
+                <h1>Linha ELDR - Interruptores diferenciais residuais</h1>
             </div>
         </div>
         <div class="row">
@@ -10,7 +10,12 @@
                 <img src="img/Banner_Linha-ELDR.jpg" alt="Banner Linha ELDR" width="100%"/>
             </div>
         </div>
-        <div class="row banner-description">
+    </div>
+</section>
+
+<section>
+    <div class="container bg-gray">
+        <div class="row">
             <div class="col-xs-12">
                <ul>
                     <li>Proteção contra fulga;</li>
@@ -28,23 +33,29 @@
 </section>
 
 <section>
-    <div class="container bg-gray">
-        <div class="row table-header">
-            <div class="col-xs-12">
-                <p>Código de Chave</p>
-            </div>
-        </div>
+    <div class="container bg-gray-dark section-header">
         <div class="row">
             <div class="col-xs-12">
-                <p> 
-                	ELDR - 463 - 30 
-                	<br/>
-                	ESTÁ FALTANDO A IMAGEM CORRETA
-                </p>
+                <span>Código de Chave</span>
             </div>
         </div>
+    </div>
+</section>
+
+<section>
+    <div class="container bg-gray-light">
         <div class="row">
-        	<div class="col-xs-12">
+            <div class="col-xs-12">
+                <img src="img/Pg Linha ELDR/codigo_chave (print).png" alt="Código de Chave" width="100%"/>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
                 <img src="img/Pg Linha ELDR/Imagem-01.jpg" alt="Código de Chave" width="100%"/>
             </div>
         </div>
@@ -52,20 +63,23 @@
 </section>
 
 <section>
-    <div class="container bg-gray">
-        <div class="row table-header">
+    <div class="container bg-gray-dark section-header">
+        <div class="row">
             <div class="col-xs-12">
-                <p>Codificação</p>
+                <span>Codificação</span>
             </div>
         </div>
+    </div>
+</section>
+
+<section>
+    <div class="container bg-gray-light">
         <div class="row">
-            <div class="col-xs-3">
-                <img src="img/Pg Linha ELDR/RCCD63A---ELDR-230V.png" alt="Codificação" width="20%"/>
-            </div>
-            <div class="col-xs-9">
-                <table>                    
+            <div class="col-xs-12">
+                <table class="table table-bordered">
                     <thead>
                         <tr>
+                            <th class="empty-column"></th>
                             <th>Corrente Nominal In</th>
                             <th>Corrente Residual In</th>
                             <th>Número de pólos</th>
@@ -74,52 +88,55 @@
                     </thead>
                     <tbody>
                         <tr>
+                            <td rowspan="8" class="img-column">
+                                <img src="img/Pg Linha ELDR/RCCD63A---ELDR-230V.png" alt="Codificação" height="150px" />
+                            </td>
                             <td>25A</td>
                             <td>30mA</td>
                             <td>2</td>
-                            <td>ELDR-225-30</td>
+                            <td class="highlight-column">ELDR-225-30</td>
                         </tr>
                         <tr>
                             <td>40A</td>
                             <td>30mA</td>
                             <td>2</td>
-                            <td>ELDR-240-30</td>
+                            <td class="highlight-column">ELDR-240-30</td>
                         </tr>
                         <tr>
                             <td>63A</td>
                             <td>30mA</td>
                             <td>2</td>
-                            <td>ELDR-263-30</td>
+                            <td class="highlight-column">ELDR-263-30</td>
                         </tr>
                         <tr>
                             <td>80A</td>
                             <td>30mA</td>
                             <td>2</td>
-                            <td>ELDR-280-30</td>
+                            <td class="highlight-column">ELDR-280-30</td>
                         </tr>
                         <tr>
                             <td>25A</td>
                             <td>30mA</td>
                             <td>4</td>
-                            <td>ELDR-425-30</td>
+                            <td class="highlight-column">ELDR-425-30</td>
                         </tr>
                         <tr>
                             <td>40A</td>
                             <td>30mA</td>
                             <td>4</td>
-                            <td>ELDR-440-30</td>
+                            <td class="highlight-column">ELDR-440-30</td>
                         </tr>
                         <tr>
                             <td>63A</td>
                             <td>30mA</td>
                             <td>4</td>
-                            <td>ELDR-463-30</td>
+                            <td class="highlight-column">ELDR-463-30</td>
                         </tr>
                         <tr>
                             <td>80A</td>
                             <td>30mA</td>
                             <td>4</td>
-                            <td>ELDR-480-30</td>
+                            <td class="highlight-column">ELDR-480-30</td>
                         </tr>
                     </tbody>
                 </table>
@@ -129,32 +146,281 @@
 </section>
 
 <section>
-    <div class="container bg-gray">
-        <div class="row table-header">
-            <div class="col-xs-12">
-                <p>Dimensões</p>
-            </div>
-        </div>
+    <div class="container bg-gray-dark section-header">
         <div class="row">
             <div class="col-xs-12">
-                <img src="img/Pg Linha ELDR/Imagem-02.jpg" alt="Dimensões" width="50%"/>
+                <span>Dimensões</span>
             </div>
         </div>
     </div>
 </section>
 
 <section>
-    <div class="container bg-gray">
-        <div class="row table-header">
-            <div class="col-xs-12">
-                <p>Pólos</p>
-            </div>
-        </div>
+    <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <img src="img/Pg Linha ELDR/Imagem-03.jpg" alt="Pólos" width="100%"/>
+                <img src="img/Pg Linha ELDR/Imagem-02.jpg" alt="Dimensões" width="100%"/>
             </div>
         </div>
     </div>
 </section>
 
+<section>
+    <div class="container bg-gray-light">
+        <div class="row">
+            <div class="col-xs-12">
+                <table class="table table-bordered">
+                    <tbody>
+                        <tr>
+                            <td colspan="2" class="empty-column"></td>
+                            <td class="highlight-column">
+                                <img src="img/Pg Linha ELDR/RCCD63A---ELDR-230V.png" height="100px" width="100px"/>
+                            </td>
+                            <td>
+                                <img src="img/Pg Linha ELDR/RCCD25A---ELDR-400V.png" height="100px" width="100px" />
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="container bg-gray-dark section-header">
+        <div class="row">
+            <div class="col-xs-12">
+                <span>Características Técnicas</span>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="container bg-gray-light">
+        <div class="row">
+            <div class="col-xs-12">
+                <table class="table table-bordered">
+                    <tbody>
+                        <tr>
+                            <td>Pólos</td>
+                            <td class="empty-column"></td>
+                            <td class="highlight-column">2</td>
+                            <td>4</td>
+                        </tr>
+                        <tr>
+                            <td>Tipo de proteção contra corrente residual</td>
+                            <td class="empty-column"></td>
+                            <td class="highlight-column">Eletromagnético</td>
+                            <td>Eletromagnético</td>
+                        </tr>
+                        <tr>
+                            <td>Tipo de trabalho contra corrente residual</td>
+                            <td class="empty-column"></td>
+                            <td class="highlight-column">AC</td>
+                            <td>AC</td>
+                        </tr>
+                        <tr>
+                            <td>Corrente nominal </td>
+                            <td>In</td>
+                            <td class="highlight-column">25-80A</td>
+                            <td>25-80A</td>
+                        </tr>
+                        <tr>
+                            <td>Corrente residual nominal </td>
+                            <td>I n</td>
+                            <td class="highlight-column">30mA</td>
+                            <td>30mA</td>
+                        </tr>
+                        <tr>
+                            <td>Tensão nominal</td>
+                            <td>Ue</td>
+                            <td class="highlight-column">230V</td>
+                            <td>400V</td>
+                        </tr>
+                        <tr>
+                            <td>Tensão de isolamento </td>
+                            <td>Ui</td>
+                            <td class="highlight-column">500V</td>
+                            <td>500V</td>
+                        </tr>
+                        <tr>
+                            <td>Tensão de impulso estável </td>
+                            <td>Uimp</td>
+                            <td class="highlight-column">6kV</td>
+                            <td>6kV</td>
+                        </tr>
+                        <tr>
+                            <td>Tensão do ensaio elétrico</td>
+                            <td class="empty-column"></td>
+                            <td class="highlight-column">2.5kV</td>
+                            <td>2.5kV</td>
+                        </tr>
+                        <tr>
+                            <td>Frequência nominal</td>
+                            <td class="empty-column"></td>
+                            <td class="highlight-column">50/60Hz</td>
+                            <td>50/60Hz</td>
+                        </tr>
+                        <tr>
+                            <td>Corrente de curto-circuito</td>
+                            <td>Inc/ I n</td>
+                            <td class="highlight-column">6000A</td>
+                            <td>6000A</td>
+                        </tr>
+                        <tr>
+                            <td>Fusível para proteção de back-up</td>
+                            <td class="empty-column"></td>
+                            <td class="highlight-column"> ? </td>
+                            <td> ? </td>
+                        </tr>
+                        <tr>
+                            <td>Corrente residual nominal e capacidade de interrupção</td>
+                            <td>Im/ I m</td>
+                            <td class="highlight-column">500 (≤50A) - 630 (63A)</td>
+                            <td>500 (≤50A) - 630 (63A)</td>
+                        </tr>
+                        <tr>
+                            <td>Grau de poluição</td>
+                            <td class="empty-column"></td>
+                            <td class="highlight-column">2</td>
+                            <td>2</td>
+                        </tr>
+                        <tr>
+                            <td>Vida útil elétrica</td>
+                            <td class="empty-column"></td>
+                            <td class="highlight-column">4000</td>
+                            <td>4000</td>
+                        </tr>
+                        <tr>
+                            <td>Vida útil mecânica</td>
+                            <td class="empty-column"></td>
+                            <td class="highlight-column">10000</td>
+                            <td>10000</td>
+                        </tr>
+                        <tr>
+                            <td>Indicador de posição de contacto</td>
+                            <td class="empty-column"></td>
+                            <td class="highlight-column">não</td>
+                            <td>não</td>
+                        </tr>
+                        <tr>
+                            <td>Indicador de falha</td>
+                            <td class="empty-column"></td>
+                            <td class="highlight-column">sim</td>
+                            <td>sim</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="container bg-gray-dark section-header">
+        <div class="row">
+            <div class="col-xs-12">
+                <span>Instalação</span>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="container bg-gray-light">
+        <div class="row">
+            <div class="col-xs-12">
+                <table class="table table-bordered">
+                    <tbody>
+                        <tr>
+                            <td>Grau de protecção </td>
+                            <td>corpo do DR</td>
+                            <td class="highlight-column">IP20</td>
+                            <td>IP20</td>
+                        </tr>
+                        <tr>
+                            <td class="empty-column"></td>
+                            <td>instalado na caixa distribuição</td>
+                            <td class="highlight-column">IP40</td>
+                            <td>IP40</td>
+                        </tr>
+                        <tr>
+                            <td>Temperatura ambiente</td>
+                            <td class="empty-column"></td>
+                            <td class="highlight-column">-5º ~+40ºC</td>
+                            <td>-5º ~+40ºC</td>
+                        </tr>
+                        <tr>
+                            <td>Temperatura de armazenamento</td>
+                            <td class="empty-column"></td>
+                            <td class="highlight-column">-25º ~+70ºC</td>
+                            <td>-25º ~+70ºC</td>
+                        </tr>
+                        <tr>
+                            <td>Tipo de conexão do terminal</td>
+                            <td class="empty-column"></td>
+                            <td class="highlight-column">Cabo / barramento</td>
+                            <td>Cabo / barramento</td>
+                        </tr>
+                        <tr>
+                            <td>Tamanho dos terminais para cabos</td>
+                            <td class="empty-column"></td>
+                            <td class="highlight-column">25mm²</td>
+                            <td>25mm²</td>
+                        </tr>
+                        <tr>
+                            <td>Tamanho dos terminais para barramento</td>
+                            <td class="empty-column"></td>
+                            <td class="highlight-column">25mm²</td>
+                            <td>25mm²</td>
+                        </tr>
+                        <tr>
+                            <td>Torque de aperto</td>
+                            <td class="empty-column"></td>
+                            <td class="highlight-column">3.0</td>
+                            <td>3.0</td>
+                        </tr>
+                        <tr>
+                            <td>Conexão</td>
+                            <td class="empty-column"></td>
+                            <td class="highlight-column">Superior e inferior</td>
+                            <td>Superior e inferior</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="container bg-gray-dark section-header">
+        <div class="row">
+            <div class="col-xs-12">
+                <span>Pólos</span>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <img src="img/Pg Linha ELDR/Imagem-03.jpg" alt="Dimensões" width="100%"/>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section style="margin: 40px 0;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 text-right">
+                <a class="btn-primary" href="#">Baixar em PDF</a>
+            </div>
+        </div>
+    </div>
+</section>
