Refatoração da tabela

--- a/less/creative.less
+++ b/less/creative.less
@@ -237,6 +237,7 @@ table {
 		font-size: 14px;
 		text-align: center;
 		border: 2px solid @gray!important;
+		padding: 0!important;
 	}
 	tbody > tr > .highlight-column {
 		font-weight: bold;
