--- a/css/creative.css
+++ b/css/creative.css
@@ -256,6 +256,7 @@ table tbody > tr > td {
   font-size: 14px;
   text-align: center;
   border: 2px solid #d1d2d4 !important;
+  padding: 0!important;
 }
 table tbody > tr > .highlight-column {
   font-weight: bold;
