Página ELPS finalizada

--- a/views/elps/view.html
+++ b/views/elps/view.html
@@ -1,1 +1,194 @@
-<p> PÁGINA ELPS </p>
+<section>
+    <div class="container bg-gray-dark banner">
+        <div class="row">
+            <div class="col-xs-12">
+                <h1>Linha ELPS - Protetores contra surto</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12">
+                <img src="img/Banner_Linha-ELPS.jpg" alt="Banner Linha ELPS" width="100%" />
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
+	<div class="container bg-gray">
+		<div class="row">
+            <div class="col-xs-8">
+               <ul>
+                    <li>Protege sistemas elétricos e aparelhos elétricos contra
+                    surto de tensão causado por descarga de raios;</li>
+                    <li>Protege sistemas elétricos e aparelhos elétricos contra
+                    sobretensão instantânea;</li>
+                    <li>A seleção do dispositivo de proteção contra surtos deve
+                    seguir os seguintes princípios:</li>
+					<ul>
+                        <li> a tensão aplicada entre os dois terminais do dispositivo
+                         estabilizador de energia, devem ser menor ou igual à tensão
+                         operacional (Uc) dos valores máximos contínuos do
+                         dispositivo contra sobretensões;</li>
+                        <li> o nível de proteção de tensão do dispositivo contra sobretensões,
+                        deve ser menor do que o limite do equipamento protegido;</li>
+                        <li>selecione as especificações correspondentes de acordo com o
+                        sistema de aterramento e o modo de proteção.</li>
+                    </ul>
+               </ul>
+            </div>
+        </div>
+	</div>
+</section>
+
+<section>
+    <div class="container bg-gray-dark section-header">
+        <div class="row">
+            <div class="col-xs-12">
+                <span>Dispositivos de proteção contra surtos elétricos</span>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="container bg-gray-light">
+        <div class="row">
+            <div class="col-xs-12">
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th>Tensão máxima <br> de operação contínua <br> Uc (V~)</th>
+                            <th>Circuito de ligação <br> com dispositivo <br> de protecção</th>
+                            <th>Sistema de <br> aterramento adequado</th>
+                            <th>Modo de proteção</th>
+                            <th>Número de <br> pólos</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td rowspan="3">275</td>
+                            <td>monofásica/trifásica- quatro fios</td>
+                            <td>T T</td>
+                            <td>L-N</td>
+                            <td>1</td>
+                        </tr>
+                        <tr>
+                            <td>monofásica/trifásica - cinco fios</td>
+                            <td>T N-S</td>
+                            <td>L-PE N-PE L-N</td>
+                            <td>1 2 3 4</td>
+                        </tr>
+                        <tr>
+                            <td>monofásica/trifásica - quatro fios</td>
+                            <td>TN-C</td>
+                            <td>L-PE</td>
+                            <td>1 2 3 </td>
+                        </tr>
+                </table>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="container bg-gray-dark section-header">
+        <div class="row">
+            <div class="col-xs-12">
+                <span>Codificação</span>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="container bg-gray-light">
+        <div class="row">
+            <div class="col-xs-12">
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th class="empty-column"></th>
+                            <th>Número de <br> pólos</th>
+                            <th>Corrente máxima <br> de descarga (kA)</th>
+                            <th>Corrente de descarga <br> nominal (kA)</th>
+                            <th>Categoria de <br> instalação</th>
+                            <th>Tensão de operação <br> contínua Uc (V)</th>
+                            <th>Nível de proteção <br> de tensão Up (kV)</th>
+                            <th>Código</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td rowspan="4" class="img-column">
+                                <img src="img/Pg Linha ELPS/DPS---1-pólo.jpg" alt="ELPS 1 Pólo" height="200px" />
+                            </td>
+                            <td>1</td>
+                            <td>40</td>
+                            <td>20</td>
+                            <td>II</td>
+                            <td>275</td>
+                            <td>1,2</td>
+                            <td>ELPS-401-275</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>40</td>
+                            <td>20</td>
+                            <td>II</td>
+                            <td>275</td>
+                            <td>1,2</td>
+                            <td>ELPS-402-275</td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>40</td>
+                            <td>20</td>
+                            <td>II</td>
+                            <td>275</td>
+                            <td>1,2</td>
+                            <td>ELPS-403-275</td>
+                        </tr>
+                        <tr>
+                            <td>4</td>
+                            <td>40</td>
+                            <td>20</td>
+                            <td>II</td>
+                            <td>275</td>
+                            <td>1,2</td>
+                            <td>ELPS-404-275</td>
+                        </tr>
+                </table>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="container bg-gray-dark section-header">
+        <div class="row">
+            <div class="col-xs-12">
+                <span>Dimensões</span>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <img src="img/Pg Linha ELPS/Gráficos.jpg" alt="Dimensões" width="100%" />
+            </div>
+        </div>
+    </div>
+</section>
+
+<section style="margin: 40px 0;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 text-right">
+                <a class="btn-primary" href="#">Baixar em PDF</a>
+            </div>
+        </div>
+    </div>
+</section>
