--- a/css/creative.css
+++ b/css/creative.css
@@ -152,6 +152,16 @@ header .container .banner-buttons .active:hover {
   font-size: 16px;
   color: #808285;
 }
+.bg-white h1 {
+  color: #0089cf;
+  font-family: EatonReg;
+}
+.bg-white ul {
+  margin: 20px 0 0 20px;
+}
+.bg-white ul li {
+  color: #808285;
+}
 .bg-gray-light {
   background-color: #e6e7e9;
 }
@@ -186,8 +196,6 @@ header .container .banner-buttons .active:hover {
   bottom: 0;
   right: 15px;
   transition: all 0.5s;
-}
-.bg-gray-light .more-details span a {
   color: white;
 }
 .bg-gray-light .more-details span:hover {
@@ -231,7 +239,6 @@ header .container .banner-buttons .active:hover {
 }
 table {
   margin: 20px 0 0 0!important;
-  border: 2px solid #d1d2d4 !important;
 }
 table thead > tr > th {
   background-color: #0089cf;
@@ -239,7 +246,16 @@ table thead > tr > th {
   font-size: 14px;
   font-weight: lighter;
   text-align: center;
+  border: 0!important;
+  vertical-align: middle!important;
+}
+table tbody > tr > td {
+  color: black;
+  font-size: 14px;
+  text-align: center;
   border: 2px solid #d1d2d4 !important;
+  padding: 0!important;
+  vertical-align: middle!important;
 }
 table .empty-column,
 table .img-column {
@@ -251,17 +267,14 @@ table .empty-column img,
 table .img-column img {
   padding: 0 10px;
 }
-table tbody > tr > td {
-  color: black;
-  font-size: 14px;
-  text-align: center;
-  border: 2px solid #d1d2d4 !important;
-  padding: 0!important;
-}
 table tbody > tr > .highlight-column {
-  font-weight: bold;
   background-color: #d8e9f1;
   font-family: EatonBold, 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  font-weight: bold;
+}
+table tbody > tr > .highlight-column-gray {
+  font-family: EatonBold, 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  font-weight: bold;
 }
 table tbody > .highlight-row > td {
   background-color: #d8e9f1;
@@ -272,6 +285,41 @@ table tbody > .highlight-row > td:last-child {
 }
 table tbody > .highlight-row-gray > td:last-child {
   font-family: EatonBold, 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  font-weight: bold;
+}
+.elcm-table > thead > tr > th:first-child,
+.elcm-table > tbody > tr > td:first-child {
+  text-align: left;
+  padding-left: 30px!important;
+}
+.elcm-table-bottom {
+  border-left: 0!important;
+  border-right: 0!important;
+  margin: 0!important;
+}
+.elcm-table-bottom tbody > tr td {
+  border-left: 0!important;
+  border-right: 0!important;
+}
+.elcm-table-bottom tbody > tr .gray-column {
+  background-color: #808285;
+  padding: 3px 25px;
+}
+.elcm-table-bottom tbody > tr .gray-column span {
+  color: white;
+  font-size: 18px;
+}
+.elcm-table-bottom tbody > tr .text-position-left {
+  text-align: left!important;
+  padding-left: 30px!important;
+}
+.elcm-table-bottom tbody > tr .header-column {
+  vertical-align: bottom!important;
+  border: 2px solid #e6e7e9 !important;
+  padding: 80px 0 0 0!important;
+}
+.text-primary {
+  color: #0089cf;
   font-weight: bold;
 }
 /* Classes Footer - Eaton */
