--- a/views/main.html
+++ b/views/main.html
@@ -63,7 +63,7 @@
 			</div>
 			<div class="col-md-2">
 				<div class="more-details">
-					<span><a href="{{ item.pageLink }}">Saiba mais...</a></span>
+					<a href="{{ item.pageLink }}"><span>Saiba mais...</span></a>
 				</div>
 			</div>
 		</div>
